--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     "require": {
         "php": "^8.0",
         "coderflexx/laravel-presenter": "^1.1",
-        "illuminate/contracts": "^8.0|^9.0",
+        "illuminate/contracts": "^8.0|^9.0|^10.0",
         "jaybizzle/crawler-detect": "^1.2",
         "spatie/laravel-package-tools": "^1.9.2"
     },
